Personalize site a bit

--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -53,7 +53,10 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="{{'/notes' | relative_url}}" class="navbar-item">
+		<a href="{{'/notes' | relative_url}}" class="navbar-item">
+          Blog
+        </a>
+        <!-- <a href="{{'/notes' | relative_url}}" class="navbar-item">
           Demo Feed
         </a>
         <a href="../post/how-to" class="navbar-item">
@@ -67,7 +70,7 @@
         </a>
         <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
           Obsidian
-        </a>
+        </a> -->
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
         <div class="navbar-item">
