--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,8 +1,13 @@
 <div class="home-intro">
-    <div class="jumbo">{{site.heading}} </div>
-    <div class="home-sub-text"> <h3>
-        Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
-        Check out the <a href="{{'/notes' | relative_url}}"> demo </a>, <a href="{{'/post/features' | relative_url}}"> features </a> and <a href="{{'/post/how-to' | relative_url}}"> how to</a>.
-        </h3> 
-</div> </div>
-
+  <div class="home-sub-text">
+    <h3>
+      I'm Illia Ilin, a passionate professional with a decade of experience in
+      telecommunications and IT. With my expertise in project management, data
+      analysis, and process automation, I bring a creative approach to driving
+      efficiency and achieving outstanding results. My keen interest in DevOps
+      fuels my dedication to fostering innovation, building collaborative teams,
+      and leveraging cutting-edge technologies. Let's rise to new heights
+      together and make a lasting impact in the world of technology.
+    </h3>
+  </div>
+</div>
