Huge update of the site, personal information mostly

--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,13 +1,23 @@
 <div class="home-intro">
+  <div class="home-image">
+    <img src="..{{ site.baseurl }}/assets/img/Illia-Ilin.png" />
+  </div>
+  <h5 class="meta-title">Hello, I'm {{ site.me.name }} ⸻</h5>
+  <div class="jumbo">
+    I'm a passionate professional with a decade of experience in
+    telecommunications and IT.
+  </div>
   <div class="home-sub-text">
     <h3>
-      I'm Illia Ilin, a passionate professional with a decade of experience in
-      telecommunications and IT. With my expertise in project management, data
-      analysis, and process automation, I bring a creative approach to driving
-      efficiency and achieving outstanding results. My keen interest in DevOps
-      fuels my dedication to fostering innovation, building collaborative teams,
-      and leveraging cutting-edge technologies. Let's rise to new heights
-      together and make a lasting impact in the world of technology.
+      With my expertise in project management, data analysis, and process
+      automation, I bring a creative approach to driving efficiency and
+      achieving outstanding results. My keen interest in DevOps fuels my
+      dedication to fostering innovation, building collaborative teams, and
+      leveraging cutting-edge technologies.
     </h3>
+  </div>
+  <div class="jumbo">
+    Let's rise to new heights together and make a lasting impact in the world of
+    technology.
   </div>
 </div>
