--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -17,6 +17,6 @@ file contains the markup for the copyright notice. * {%- endcomment -%} {%- if
 site.copyright.msg != nil and site.copyright.msg != empty and site.copyright.msg
 != null -%}
 <div id="copyright">
-  <p id="copyright-notice">{{site.copyright.year}} • {{site.copyright.msg}}</p>
+  <p id="copyright-notice">{{site.copyright.year}} • {{site.copyright.msg}} • <a href="{{'/credits' | relative_url}}"> Credits </a></p>
 </div>
 {%- endif -%}
