--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,7 +1,6 @@
 <div class="home-intro">
-  <div class="home-image">
-    <img src="..{{ site.baseurl }}/assets/img/Illia-Ilin.png" />
-  </div>
+  <img src="..{{ site.baseurl }}/assets/img/Illia-Ilin.png" />
+  <br />
   <h5 class="meta-title">Hello, I'm {{ site.me.name }} ⸻</h5>
   <div class="jumbo">
     I'm a passionate professional with a decade of experience in
@@ -15,9 +14,9 @@
       dedication to fostering innovation, building collaborative teams, and
       leveraging cutting-edge technologies.
     </h3>
-  </div>
-  <div class="jumbo">
-    Let's rise to new heights together and make a lasting impact in the world of
-    technology.
+    <h3>
+      Let's rise to new heights together and make a lasting impact in the world
+      of technology.
+    </h3>
   </div>
 </div>
