--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -66,7 +66,13 @@ home page. * {%- endcomment -%}
       <a href="{{'/diary-of-devops' | relative_url}}" class="navbar-item">
         Diary of DevOps
       </a>
-      <a href="{{'/notes' | relative_url}}" class="navbar-item"> Blog </a>
+      <a
+        href="{{'/awesome-lists-for-devops' | relative_url}}"
+        class="navbar-item"
+      >
+        Awesome Lists
+      </a>
+      <a href="{{'/notes' | relative_url}}" class="navbar-item"> Notes </a>
       <!-- <a href="{{'/notes' | relative_url}}" class="navbar-item">
           Demo Feed
         </a>
